создал компонент Tag - 7.11

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,6 +4,7 @@
  --primary-hover:#6333df;
  --gray:#787D85;
  --light-gray:#EBEBEB;
+ --medium-gray:#B3C0D9;
  --red:#DE0000;
  --orange:#FC836D;
  --light-green:#C8F8E4;
